# echotools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  abnormis.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CHANGELOG.md  README.md  api.md  modules.md
src/echotools/: __init__.py  _version.py  compat.py  keys.py  translate.py  version.py
src/echotools/base/cache/: __init__.py  list_cache.py
src/echotools/base/config/: __init__.py  base.py  center.py  center_notify.py  center_template.py  loader.py
src/echotools/base/errors/: __init__.py  classify.py  common.py  http.py
src/echotools/base/ids/: __init__.py
src/echotools/base/io/: __init__.py  io_utils.py  printstream.py
src/echotools/base/logger/: __init__.py
src/echotools/base/retry/: __init__.py  retry.py
src/echotools/cache/: __init__.py  list_cache.py  memory_cache.py
src/echotools/config/: __init__.py  base.py  center.py  loader.py  merge.py
src/echotools/dispatch/: __init__.py  dispatcher.py  proxy_selector.py  selector.py  usage.py
src/echotools/errors/: __init__.py  base.py  classify.py  common.py  http.py
src/echotools/events/: __init__.py  bus.py  event.py
src/echotools/exec/: keys.py
src/echotools/exec/dispatch/: __init__.py  candidate.py  dispatcher.py  proxy_selector.py  race.py  selector.py
src/echotools/exec/fncall/: __init__.py  registry.py
src/echotools/exec/fncall/parsers/: __init__.py  (+3 more)
src/echotools/exec/lifecycle/: __init__.py  manager.py  updater.py  updater_pull.py
src/echotools/exec/process/: __init__.py  port.py
src/echotools/exec/protocol/: __init__.py  base.py
src/echotools/exec/terminal/: __init__.py  sanitize.py  ssh.py  tmux.py
src/echotools/files/: __init__.py  file_util.py
src/echotools/fncall/: __init__.py  registry.py  upload.txt
src/echotools/fncall/parsers/: __init__.py  stream.py  xml_parser.py
src/echotools/fncall/prompt/: __init__.py  history.py  inject.py  templates.py
src/echotools/fncall/protocols/: __init__.py  antml.py  bracket.py  custom.py  dsml.py  entml.py  nous.py  original.py  xml.py
src/echotools/fncall/shared/: __init__.py  coercion.py  loop_detect.py  normalization.py  xml_helpers.py
src/echotools/ids/: __init__.py  generator.py
src/echotools/io/: __init__.py  io_utils.py  printstream.py
src/echotools/lifecycle/: __init__.py  manager.py  updater.py
src/echotools/logger/: __init__.py  manager.py
src/echotools/media/: translate.py
src/echotools/media/console/: __init__.py  charmap.py  spinner.py  ui.py
src/echotools/media/events/: __init__.py  bus.py
src/echotools/media/spinner/: __init__.py  spinner.py  spinner_color.py
src/echotools/media/tracing/: __init__.py  span.py  tracer.py
src/echotools/media/watcher/: __init__.py  file_watcher.py
src/echotools/media/web/: __init__.py  application.py  middleware.py  stats.py  utils.py
src/echotools/network/: __init__.py  http_utils.py
src/echotools/plat/files/: __init__.py  file_util.py
src/echotools/plat/network/: __init__.py  http_utils.py
src/echotools/plat/plugin/: __init__.py  discovery.py  registry.py  registry_ops.py
src/echotools/plat/proxy/: __init__.py  manager.py
src/echotools/plat/runtime/: __init__.py  collector.py
src/echotools/plat/scheduler/: __init__.py  scheduler.py
src/echotools/plat/sdk/: __init__.py  facade.py
src/echotools/plugin/: __init__.py  base.py  discovery.py  registry.py
src/echotools/process/: __init__.py  port.py
src/echotools/protocol/: __init__.py  base.py
src/echotools/proxy/: __init__.py  manager.py
src/echotools/retry/: __init__.py  retry.py
src/echotools/runtime/: __init__.py  collector.py
src/echotools/scheduler/: __init__.py  scheduler.py
src/echotools/sdk/: __init__.py  facade.py
src/echotools/spinner/: __init__.py  spinner.py
src/echotools/terminal/: __init__.py  conpty.py  local.py  session.py  ssh.py
src/echotools/tracing/: __init__.py  context.py  span.py  tracer.py
src/echotools/watcher/: __init__.py  file_watcher.py
src/echotools/web/: __init__.py  application.py  broker.py  middleware.py  stats.py  utils.py
src/echotools/web/input_box/: app.js  style.css
src/tests/: conftest.py  test_cache_retry.py  test_completion.py  test_config.py  test_config_extended.py  test_console.py  test_coverage_core.py  test_dispatch.py  test_dispatch_extended.py  test_dispatch_race.py  test_entml_protocol.py  test_entml_thinking_history.py  test_entml_thinking_parse.py  test_entml_tools.py  test_errors.py  test_errors_common.py  test_events.py  test_events_event.py  test_facade.py  test_fncall.py  test_ids.py  test_imports.py  test_io.py  test_keys.py  test_lifecycle.py  test_logger.py  test_merge.py  test_plugin.py  test_printstream.py  test_protocols.py  test_proxy.py  test_proxy_selector.py  test_runtime.py  test_scheduler.py  test_tracing.py  test_usage.py  test_web.py  test_web_broker.py
tests/: bench_import.py  test_cache_retry.py  test_completion.py  test_config.py  test_config_extended.py  test_coverage_core.py  test_dispatch.py  test_dispatch_extended.py  test_dispatch_race.py  test_errors.py  test_errors_common.py  test_events.py  test_events_event.py  test_facade.py  test_fncall.py  test_ids.py  test_imports.py  test_io.py  test_keys.py  test_lifecycle.py  test_logger.py  test_merge.py  test_plugin.py  test_printstream.py  test_protocols.py  test_proxy.py  test_proxy_selector.py  test_runtime.py  test_scheduler.py  test_tracing.py  test_usage.py  test_web.py  test_web_broker.py
(+40 files in other folders)
