[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echotools"
version = "2.3.13"
description = "通用基础设施 SDK：配置、日志、事件、调度、插件、协议、调用链"
readme = "docs/README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "nichengfuben" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
toml = ["tomlkit>=0.11.0", "tomli>=2.0.0; python_version < '3.11'"]
watch = ["watchdog>=3.0.0"]
http = ["aiohttp>=3.8.0"]
socks = ["aiohttp-socks>=0.8.0"]
ssh = ["paramiko>=3.0.0"]
terminal = ["pywinpty>=2.0.0; sys_platform == 'win32'"]
all = [
    "tomlkit>=0.11.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "watchdog>=3.0.0",
    "aiohttp>=3.8.0",
    "aiohttp-socks>=0.8.0",
    "paramiko>=3.0.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/nichengfuben/echotools"
Repository = "https://github.com/nichengfuben/echotools"
Issues = "https://github.com/nichengfuben/echotools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
echotools = ["py.typed", "media/web/input_box/**/*"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["echotools"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = [
    "no-any-return",
    "unused-ignore",
    "method-assign",
    "assignment",
    "index",
    "arg-type",
    "attr-defined",
    "var-annotated",
]

[[tool.mypy.overrides]]
module = "echotools.exec.terminal.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--tb=short"]
markers = [
    "http: tests requiring aiohttp",
    "ssh: tests requiring paramiko",
    "terminal: tests requiring terminal extras",
]

[tool.coverage.run]
source = ["src/echotools"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/compat.py",
    "*/terminal/*",
    "*/spinner/*",
    "*/media/web/input_box/*",
    "*/lifecycle/updater.py",
    "*/watcher/*",
    "*/process/*",
    "*/network/*",
    "*/translate.py",
    "*/files/*",
    "*/fncall/*",
    "*/config/*",
    "*/proxy/*",
    "*/plugin/*",
    "*/protocol/*",
    "*/web/application.py",
    "*/web/middleware.py",
    "*/web/utils.py",
]

[tool.coverage.report]
fail_under = 89
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]